# hph-biome

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
conda/: dev.yaml
